IVYPORTAL-9147: Various or urgent requests in IVYPORTAL S184 - Fixed bug: chat messages not scroll on iphone - Fixed bug: username in chat dialog not aligned correctly

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/chat.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/chat.css
@@ -342,6 +342,7 @@
 .chat-meta {
   cursor: default;
   position: relative;
+  text-align: left;
 }
 
 .my-message .chat-meta {
